--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "hashids/hashids": "^4.1",
         "laravel/framework": "^8.40",
         "laravel/passport": "^10.1",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "pbmedia/laravel-ffmpeg": "^7.5"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
